# cosmic-ext-applet-per-app-layout

./: Cargo.toml  Makefile  README.md  deny.toml  justfile
.github/workflows/: aur.yml  ci.yml  release.yml
aur/: PKGBUILD  cosmic-ext-applet-per-app-layout-bin.install
data/: io.github.utrumo.CosmicExtAppletPerAppLayout.desktop
docs/superpowers/plans/: 2026-03-31-rename-project.md
docs/superpowers/specs/: 2026-03-31-toplevel-info-handler-design.md
i18n/en/: cosmic_ext_applet_per_app_layout.ftl
src/: app.rs  i18n.rs  main.rs  wayland_handler.rs  wayland_state.rs  wayland_subscription.rs  xkb.rs
