[package]
name = "cosmic-ext-applet-per-app-layout"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
authors = ["devpa"]
description = "COSMIC panel applet that remembers keyboard layout for each application"
repository = "https://github.com/devpa/cosmic-ext-applet-per-app-layout"
rust-version = "1.82"

[profile.release]
lto = "fat"
strip = true

[dependencies]
# COSMIC applet framework
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = [
    "applet",
] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
anyhow = "1"

# Logging
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }

# i18n
i18n-embed = { version = "0.16", default-features = false, features = [
    "rust-embed",
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = { version = "0.10", default-features = false }
rust-embed = { version = "8.11", default-features = false }

# COSMIC Wayland protocols and client toolkit
# wayland-client, calloop, calloop-wayland-source are re-exported via cosmic-client-toolkit::sctk
# rev must match libcosmic's pin to avoid duplicate crate versions
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols.git", rev = "160b086", default-features = false }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols.git", rev = "160b086", default-features = false }

# COSMIC config for xkb_config read/write
cosmic-config = { git = "https://github.com/pop-os/libcosmic.git", default-features = false }

[lints.rust]
unsafe_code = "deny"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
# Lint groups
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# Explicit allows (noise > value)
option_if_let_else     = "allow"  # nursery: if-let is more readable than map_or_else
multiple_crate_versions = "allow" # transitive deps from libcosmic
cargo_common_metadata  = "allow"  # not publishing to crates.io

# restriction — error handling / panics
unwrap_used             = "warn"
expect_used             = "warn"
panic                   = "warn"
todo                    = "warn"
unimplemented           = "warn"
indexing_slicing         = "warn"
arithmetic_side_effects = "warn"
as_conversions          = "warn"
get_unwrap              = "warn"
map_err_ignore          = "warn"
try_err                 = "warn"

# restriction — debug code
dbg_macro               = "warn"
print_stdout            = "warn"
print_stderr            = "warn"
use_debug               = "warn"

# restriction — safety
undocumented_unsafe_blocks  = "warn"
rc_buffer                   = "warn"
rc_mutex                    = "warn"
exhaustive_enums            = "warn"
exhaustive_structs          = "warn"

# restriction — style / cleanliness
str_to_string               = "warn"
string_add                  = "warn"
shadow_unrelated            = "warn"
redundant_type_annotations  = "warn"
rest_pat_in_fully_bound_structs = "warn"
float_arithmetic            = "warn"
missing_assert_message      = "warn"

[[bin]]
name = "cosmic-ext-applet-per-app-layout"
path = "src/main.rs"
